# BlanketBot

./: .dockerignore  .env.example  .gitignore  PLAN.md  README.md  bot.py  checks.py  db.py  docker-compose.yml  dockerfile  privacy.md  utils.py
cogs/: automod.py  (+13 more)
python/: .env.example  README.md  pyproject.toml  requirements.txt
python/bot/: __init__.py  __main__.py  client.py  config.py  constants.py  errors.py  result_types.py
python/bot/automod/: __init__.py  banned_words.py  handler.py  ignore.py  mod_queue.py  thresholds.py
python/bot/checks/: __init__.py  decorators.py
python/bot/cogs/: deps.py  foundation.py
python/bot/database/: __init__.py  connection.py  migrations.py  models.py  transaction.py
python/bot/scheduler/: __init__.py  runner.py  timed_actions.py
python/bot/services/: __init__.py  authorization.py  guild_guard.py  hierarchy.py  lockdown.py  mod_log.py  moderation.py  moderation_compensation.py  prefix.py  strikes.py
python/bot/utils/: automod_ignore.py  automod_thresholds.py  channel_permissions.py  helpers.py  logging_setup.py  resolvers.py  time.py  (+1 more)
python/migrations/: 001_initial.sql  002_strike_state.sql
python/scripts/: __init__.py  import_legacy_json.py
python/tests/: conftest.py  test_authorization.py  test_automod.py  test_banned_words.py  test_client.py  test_config.py  test_database.py  test_guild_guard.py  test_hierarchy.py  test_importer.py  test_lockdown.py  test_logging.py  test_migrations.py  test_mod_queue.py  test_moderation.py  test_prefix.py  test_staff_roles.py  test_timed_actions.py  test_warnings_cases.py
(+101 files in other folders)
